Bug 326078 - "Register new account" should not be available when editing jabber accounts
Summary: "Register new account" should not be available when editing jabber accounts
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR minor
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-10-16 01:10 UTC by David Edmundson
Modified: 2013-11-22 17:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-10-16 01:10:35 UTC
When you create a new account there is an option "register new account" to create a new account on the jabber server.

This checkbox should not exist when editing accounts as it makes no sense.

(I think this is a good junior job for Google Code-In)
Comment 1 David Edmundson 2013-11-22 17:54:44 UTC
Git commit c19091cf520a5301620a9c6568edd718233e2db5 by David Edmundson, on behalf of Oskar Jauch.
Committed on 22/11/2013 at 17:49.
Pushed by davidedmundson into branch 'master'.

"Register new account" should not be available when editing jabber accounts

Now the register check box is only on add account screen of Jabber and KDETalk visible, not on edit screen.
FIXED-IN: 0.8.0

M  +8    -2    plugins/gabble/main-options-widget-kde-talk.cpp
M  +14   -0    plugins/gabble/main-options-widget.cpp

http://commits.kde.org/telepathy-accounts-kcm/c19091cf520a5301620a9c6568edd718233e2db5