"Register new account" should not be available when editing jabber accounts

Now the register check box is only on add account screen of Jabber and KDETalk visible, not on edit screen.

BUG: 326078
FIXED-IN: 0.8.0